--- a/views/table.html
+++ b/views/table.html
@@ -42,8 +42,7 @@
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">Client info</h5>
         </div>
-        <div class="data-name">
-        </div>
+        <div id="modal-body" class="modal-body"></div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
